<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
>


    <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/layout2"

    >

        <TextView
                android:id="@+id/tradingPairIdTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trading_pair_id"
                android:textColor="@android:color/black"
        />

        <TextView
                android:id="@+id/tradingPairIdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="ABC"
        />
        <TextView
                android:id="@+id/lastTradePriceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_trade_price"
                android:textColor="@android:color/black"
        />
        <TextView
                android:id="@+id/lastTradePriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="ABC"
        />

        <TextView
                android:id="@+id/highestBidTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highest_big"
                android:textColor="@android:color/black"
        />
        <TextView
                android:id="@+id/highestBidlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="ABC"
        />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/layout1"
            app:layout_constraintEnd_toEndOf="parent"
    >
        <TextView
                android:id="@+id/lowestAskTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lowest_ask"
                android:textColor="@android:color/black"
        />

        <TextView
                android:id="@+id/lowestAskLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="ABC"
        />

        <TextView
                android:id="@+id/timestampTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timestamp"
                android:textColor="@android:color/black"
        />
        <TextView
                android:id="@+id/timestampLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="ABC"
        />
    </LinearLayout>

    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginTop="10dp"
          app:layout_constraintTop_toBottomOf="@+id/layout1"
          app:layout_constraintBottom_toBottomOf="parent"
          android:background="@android:color/darker_gray"
    />

</android.support.constraint.ConstraintLayout>